Tue Apr 17 02:05:32 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/Makefile.mk: Distribute flint_check.h.

Tue Apr 17 01:47:05 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_posdb.cc: The remote backend now supports all database
	  operations, so merge localpositionaldb_tests into
	  positionaldb_tests.
	* tests/: Remove the trivial separate api_XXXdb.h headers, some of
	  which were out-of-step with their respective .cc sources.  Instead
	  just keep the array external declarations in apitest.h.
	* tests/apitest.h,tests/api_transdb.cc: Move TESTCASE and
	  END_OF_TESTCASES macros into header.
	* tests/api_db.cc: Remove test collapsekey2 - it's only relevant for
	  the Muscat 3.6 backend, so it's unused now that has been removed.
	* tests/: Add unicode tests, adapted from Omega's utftest.

Tue Apr 17 00:14:16 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,include/Makefile.mk,include/xapian.h,
	  include/xapian/unicode.h,queryparser/,unicode/: Expose Unicode and
	  UTF-8 related classes and functions as a public API.

Mon Apr 16 16:06:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Bring document fully up-to-date, listing
	  all the planned deprecations for the bindings.  Also, include the
	  full upgrade notes in the listings, so they can be preserved
	  accessibly for posterity.  I even retrieved the notes for the
	  already-removed QueryParser::set_stemming_options from 0.9.10.

Mon Apr 16 11:36:18 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Call WSAGetLastError() instead of socket_errno()
	  when we want to compare the result against WSAEWOULDBLOCK.

Mon Apr 16 11:19:21 BST 2007  Olly Betts <olly@survex.com>

	* common/remoteconnection.h,common/safewinsock2.h: Need to negate the
	  POSIX error codes we define in terms of winsock ones.

Fri Apr 13 16:24:29 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/doxygen_api_conf.in: Turn on XML output, so that we can use