@@ -1,3 +1,10 @@
+Tue Apr 17 02:06:39 BST 2007  Olly Betts <olly@survex.com>
+
+	* include/xapian/unicode.h,unicode/utf8itor.cc: Make nonascii_to_utf8
+	  a public method.  Make get_case_type(), get_category(), and
+	  get_delta() internal, but provide a public get_category() function
+	  which takes a Unicode character value.
+
 Tue Apr 17 02:05:32 BST 2007  Olly Betts <olly@survex.com>
 
 	* backends/flint/Makefile.mk: Distribute flint_check.h.
